follow github instruction, did some modification for the map param yaml files

--- a/src/jackal_navigation/params/vlp16_config.yaml
+++ b/src/jackal_navigation/params/vlp16_config.yaml
@@ -1,32 +1,3 @@
-# map_type: costmap
-# origin_z: 0.0
-# z_resolution: 1
-# z_voxels: 2
-
-# obstacle_range: 2.5
-# raytrace_range: 3.0
-
-# publish_voxel_map: false
-# transform_tolerance: 0.5
-# meter_scoring: true
-
-# footprint: [[-0.21, -0.165], [-0.21, 0.165], [0.21, 0.165], [0.21, -0.165]]
-# footprint_padding: 0.1
-
-# plugins:
-# - {name: static_layer, type: "costmap_2d::StaticLayer"}
-# - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
-# - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
-
-# obstacles_layer:
-#   observation_sources: scan
-#   # scan: {sensor_frame: front_laser, data_type: LaserScan, topic: front/scan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
-#   scan: {sensor_frame: velodyne, data_type: PointCloud2, topic: /mid/points, marking: true, clearing: true, min_obstacle_height: 0.0, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
-# inflater_layer:
-#  inflation_radius: 0.4 #0.30
-
-# ---
-# FOR SPATIAL TEMPORAL 
 rgbd_obstacle_layer:
   enabled:                  true
   voxel_decay:              15    # seconds if linear, e^n if exponential
@@ -36,44 +7,32 @@ rgbd_obstacle_layer:
   max_obstacle_height:      2.0   # meters
   unknown_threshold:        15    # voxel height
   mark_threshold:           0     # voxel height
-  
-  ##--
-  footprint: [[-0.21, -0.165], [-0.21, 0.165], [0.21, 0.165], [0.21, -0.165]]
-  footprint_padding: 0.1
-  ##--
-
   update_footprint_enabled: true
   combination_method:       1     # 1=max, 0=override
-  obstacle_range:           5.0   # meters
+  obstacle_range:           3.0   # meters
   origin_z:                 0.0   # meters
-  publish_voxel_map:        true #false # default off
+  publish_voxel_map:        false # default off
   transform_tolerance:      0.2   # seconds
   mapping_mode:             false # default off, saves map not for navigation
   map_save_duration:        60    # default 60s, how often to autosave
-  observation_sources:      rgbd1_mark rgbd1_clear inflater_layer
-  
-  #--
-  plugins:
-  - {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
-  # - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
-  #--
+  observation_sources:      rgbd1_mark rgbd1_clear
   rgbd1_mark:
     data_type: PointCloud2
-    topic: /mid/points
+    topic: /velodyne_points
     marking: true
     clearing: false
-    min_obstacle_height: 0.0     # default 0, meters
+    min_obstacle_height: 0.3     # default 0, meters
     max_obstacle_height: 2.0     # default 3, meters
     expected_update_rate: 0.0    # default 0, if not updating at this rate at least, remove from buffer
     observation_persistence: 0.0 # default 0, use all measurements taken during now-value, 0=latest
-    inf_is_valid: true #false          # default false, for laser scans
+    inf_is_valid: false          # default false, for laser scans
     filter: "voxel"              # default passthrough, apply "voxel", "passthrough", or no filter to sensor data, recommend on
     voxel_min_points: 0          # default 0, minimum points per voxel for voxel filter
     clear_after_reading: true    # default false, clear the buffer after the layer gets readings from it
   rgbd1_clear:
-    enabled: false                #default true, can be toggled on/off with associated service call
+    enabled: true                #default true, can be toggled on/off with associated service call
     data_type: PointCloud2
-    topic: /mid/points
+    topic: /velodyne_points
     marking: false
     clearing: true
     max_z: 8.0                  # default 0, meters
@@ -83,8 +42,3 @@ rgbd_obstacle_layer:
     horizontal_fov_angle: 6.29  # 3D lidar scanners like the VLP16 have 360 deg horizontal FOV.
     decay_acceleration: 5.0     # default 0, 1/s^2. 
     model_type: 1               # default 0, model type for frustum. 0=depth camera, 1=3d lidar like VLP16 or similar
-  
-  #--
-  # inflater_layer:
-  #   inflation_radius: 0.4 #0.30
-  #--
