--- a/src/jackal_navigation/params/map_nav_params/local_costmap_params.yaml
+++ b/src/jackal_navigation/params/map_nav_params/local_costmap_params.yaml
@@ -14,3 +14,8 @@ local_costmap:
    # - {name: static_layer, type: "costmap_2d::StaticLayer"}
    # - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
    # - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
+
+   # ---
+   # FOR SPATIAL TEMPORAL
+   # plugins:
+   # - {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
