--- a/src/jackal_navigation/params/prohibition_areas.yaml
+++ b/src/jackal_navigation/params/prohibition_areas.yaml
@@ -1,12 +1,18 @@
 prohibition_areas: 
 # your first prohibited area is only a point
- - [17.09, -6.388]
-#  now we define a line
-#  it will become the thickness of the costmap resolution
- - [[8.33, 2.11],
-    [8.26, 5.11]]
-#  and last but not least a polygon with an individual number of points
+#  - [2.00, 0.8]
+# #  now we define a line
+# #  it will become the thickness of the costmap resolution
+#  - [[8.33, 2.11],
+#     [8.26, 5.11]]
+# #  and last but not least a polygon with an individual number of points
 
- - [[-1.15, -15.614],
-    [-8.35, -13.89],
-    [-5.05, -12.218]]
+# workspace not allow to go inside
+ - [[-1, 0.8],
+    [5, 0.8],
+    [-1,4],
+    [5,4]]
+
+# the frame obstacle
+ - [[14.5,-8],
+    [17.5,-8]]
