--- a/src/jackal_navigation/params/costmap_common_params.yaml
+++ b/src/jackal_navigation/params/costmap_common_params.yaml
@@ -14,17 +14,17 @@ footprint: [[-0.21, -0.165], [-0.21, 0.165], [0.21, 0.165], [0.21, -0.165]]
 footprint_padding: 0.1
 
 plugins:
-- {name: static_layer, type: "costmap_2d::StaticLayer"}
-- {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
-- {name: costmap_prohibition_layer, type: "costmap_prohibition_layer_namespace::CostmapProhibitionLayer"} #probhibition area
-- {name: inflater_layer, type: "costmap_2d::InflationLayer"}
-- {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+ - {name: static_layer, type: "costmap_2d::StaticLayer"}
+ - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
+ - {name: costmap_prohibition_layer, type: "costmap_prohibition_layer_namespace::CostmapProhibitionLayer"} #probhibition area
+ - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
+#  - {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
 obstacles_layer:
   observation_sources: scan
-  # scan: {sensor_frame: front_laser, data_type: LaserScan, topic: front/scan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
+  #scan: {sensor_frame: front_laser, data_type: LaserScan, topic: front/scan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
   scan: {sensor_frame: velodyne, data_type: PointCloud2, topic: /mid/points, marking: true, clearing: true, min_obstacle_height: -0.05, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
-inflater_layer:
- inflation_radius: 0.265 #0.30
+# inflater_layer:
+#  inflation_radius: 0.2 #0.265 #0.30
 
 # ---
 # FOR SPATIAL TEMPORAL 
