--- a/src/jackal_navigation/params/map_nav_params/global_costmap_params.yaml
+++ b/src/jackal_navigation/params/map_nav_params/global_costmap_params.yaml
@@ -15,3 +15,5 @@ global_costmap:
    # - {name: static_layer, type: "costmap_2d::StaticLayer"}
    # - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
    # - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
+   inflater_layer:
+      inflation_radius: 0.25 #0.265 #0.30
