--- a/src/jackal_navigation/params/costmap_common_params.yaml
+++ b/src/jackal_navigation/params/costmap_common_params.yaml
@@ -18,7 +18,7 @@ plugins:
  - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
  - {name: costmap_prohibition_layer, type: "costmap_prohibition_layer_namespace::CostmapProhibitionLayer"} #probhibition area
  - {name: inflater_layer, type: "costmap_2d::InflationLayer"}
-#  - {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+ - {name: rgbd_obstacle_layer,     type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
 obstacles_layer:
   observation_sources: scan
   #scan: {sensor_frame: front_laser, data_type: LaserScan, topic: front/scan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 2.5, raytrace_range: 3.0}
