--- a/src/jackal_navigation/params/base_local_planner_params.yaml
+++ b/src/jackal_navigation/params/base_local_planner_params.yaml
@@ -4,7 +4,7 @@ TrajectoryPlannerROS:
   acc_lim_x: 10.0
   acc_lim_theta:  20.0
 
-  max_vel_x: 0.4 # 0.5 
+  max_vel_x: 0.38 # 0.5 
   min_vel_x: 0.1
 
   max_vel_theta: 1.57
@@ -33,7 +33,7 @@ TrajectoryPlannerROS:
   pdist_scale: 0.2  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
   gdist_scale: 0.8 #1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
 
-  heading_lookahead: 0.325  #How far to look ahead in meters when scoring different in-place-rotation trajectories
+  heading_lookahead: 0.625 #0.325 #How far to look ahead in meters when scoring different in-place-rotation trajectories
   heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
   heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
   dwa: true #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
